third refactoring
