# controllers/citycontroller.go
@@ -1,7 +1,6 @@
 package controllers
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/Wolechacho/ticketmaster-backend/core"
@@ -13,11 +12,20 @@ type CityController struct {
 	App *core.BaseApp
 }
 
-
-func (cityController *CityController) GetCityById(cityContext echo.Context) error {
+// GetCity godoc
+// @Summary      Get city by ID
+// @Description  Get a particular city by ID
+// @Tags         cities
+// @Accept       json
+// @Produce      json
+// @Param        id  path  string  true  "Id"
+// @Success      200  {object}  services.CityModelResponse
+// @Failure      400  {object}  string
+// @Failure      404  {object}  string
+// @Router       /api/v1/city/{id} [get]
+func (cityController *CityController) GetCityByIdHandler(cityContext echo.Context) error {
 	var err error
 	req := new(services.GetCityByIdRequest)
-	fmt.Println("Did we get here GetCityById")
 	err = cityContext.Bind(req)
 	if err != nil {
 		return cityContext.JSON(http.StatusBadRequest, "Bad Request")
@@ -25,7 +33,7 @@ func (cityController *CityController) GetCityById(cityContext echo.Context) erro
 
 	resp, err := cityController.App.CityService.GetCityById(*req)
 	if err != nil {
-		return cityContext.JSON(http.StatusNotFound, err.Error())
+		return cityContext.JSON(resp.StatusCode, err.Error())
 	}
-	return cityContext.JSON(http.StatusOK, resp)
+	return cityContext.JSON(http.StatusOK, resp.City)
 }
