# routes/city-route.go
@@ -10,6 +10,6 @@ import (
 
 func cityRoutes(app *core.BaseApp, group *echo.Group) {
 	cityController := controllers.CityController{App: app}
-	group.GET("city/:id", cityController.GetCityById)
+	group.GET("city/:id", cityController.GetCityByIdHandler)
 	fmt.Println(group)
 }
